--- a/source/locale/en_GB/LC_MESSAGES/install/index.po
+++ b/source/locale/en_GB/LC_MESSAGES/install/index.po
@@ -6,9 +6,9 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: GLPI 9.2\n"
+"Project-Id-Version: GLPI 9.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-04-20 06:59+0200\n"
+"POT-Creation-Date: 2018-06-29 06:38+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -50,11 +50,11 @@ msgstr ""
 
 #: ../../source/install/index.rst:17
 msgid ""
-"GLPI follows a semantic versionning scheme, on 3 digits. The first one is "
-"the major release, the second the minor and the third the fix release."
+"GLPI follows a semantic versioning scheme, on 3 digits. The first one is the"
+" major release, the second the minor and the third the fix release."
 msgstr ""
-"GLPI follows a semantic versionning scheme, on 3 digits. The first one is "
-"the major release, the second the minor and the third the fix release."
+"GLPI follows a semantic versioning scheme, on 3 digits. The first one is the"
+" major release, the second the minor and the third the fix release."
 
 #: ../../source/install/index.rst:19
 msgid ""
@@ -78,11 +78,11 @@ msgstr "Download"
 
 #: ../../source/install/index.rst:28
 msgid ""
-"On GitHub, there is always two archives named *Source code* which should not"
-" be used."
+"On GitHub, there are always two archives named *Source code* which should "
+"not be used."
 msgstr ""
-"On GitHub, there is always two archives named *Source code* which should not"
-" be used."
+"On GitHub, there are always two archives named *Source code* which should "
+"not be used."
 
 #: ../../source/install/index.rst:30
 msgid ""
@@ -102,39 +102,45 @@ msgstr "Installation"
 
 #: ../../source/install/index.rst:37
 msgid ""
-"Packages may be available from your distribution (Red Hat, CentOS, Fedora, "
-"Ubuntu, ...) that you should use with your standard packages manager as "
-"usual."
+"Packages may be available from your Linux distribution (Red Hat, CentOS, "
+"Fedora, Ubuntu, ...) that you should use with your standard packages manager"
+" as usual."
 msgstr ""
-"Packages may be available from your distribution (Red Hat, CentOS, Fedora, "
-"Ubuntu, ...) that you should use with your standard packages manager as "
-"usual."
+"Packages may be available from your Linux distribution (Red Hat, CentOS, "
+"Fedora, Ubuntu, ...) that you should use with your standard packages manager"
+" as usual."
 
 #: ../../source/install/index.rst:39
 msgid "GLPI installation itself is composed of three steps:"
 msgstr "GLPI installation itself is composed of three steps:"
 
 #: ../../source/install/index.rst:41
-msgid "Uncompress archive in your website;"
-msgstr "Uncompress archive in your website;"
+msgid "Uncompress the archive in your website;"
+msgstr "Uncompress the archive in your website;"
 
 #: ../../source/install/index.rst:42
 msgid ""
-"Give your webserver write access to ``files`` and ``config`` directories;"
+"Give your webserver write access to the ``files`` and ``config`` "
+"directories;"
 msgstr ""
-"Give your webserver write access to ``files`` and ``config`` directories;"
+"Give your webserver write access to the ``files`` and ``config`` "
+"directories;"
 
 #: ../../source/install/index.rst:43
 msgid ""
-":doc:`launch installation wizard <wizard>` (or use :ref:`command line "
+":doc:`launch installation wizard <wizard>` (or use the :ref:`command line "
 "installation script <cdline_install>`)."
 msgstr ""
-":doc:`launch installation wizard <wizard>` (or use :ref:`command line "
+":doc:`launch installation wizard <wizard>` (or use the :ref:`command line "
 "installation script <cdline_install>`)."
 
 #: ../../source/install/index.rst:45
-msgid "Once three steps has been completed the app is ready to be used."
-msgstr "Once three steps has been completed the app is ready to be used."
+msgid ""
+"Once these three steps have been completed the application is ready to be "
+"used."
+msgstr ""
+"Once these three steps have been completed the application is ready to be "
+"used."
 
 #: ../../source/install/index.rst:48
 msgid "Files and directories locations"
@@ -142,11 +148,11 @@ msgstr "Files and directories locations"
 
 #: ../../source/install/index.rst:50
 msgid ""
-"As many other web applications, GLPI may be installed just by copying the "
-"whole directory to any web server. Anyways, this may be secure less."
+"Like many other web applications, GLPI can be installed by just copying the "
+"whole directory to any web server. However, this may be less secure."
 msgstr ""
-"As many other web applications, GLPI may be installed just by copying the "
-"whole directory to any web server. Anyways, this may be secure less."
+"Like many other web applications, GLPI can be installed by just copying the "
+"whole directory to any web server. However, this may be less secure."
 
 #: ../../source/install/index.rst:54
 msgid ""
@@ -156,17 +162,17 @@ msgstr ""
 
 #: ../../source/install/index.rst:56
 msgid ""
-"GLPI stores some data in the ``files`` directory, database access "
-"configuration is stored in the ``config`` directory, ... Even if GLPI "
-"provides some securities to prevent files to be accessed from a webserver "
-"directly, the best way to go is to store data outside of the web root. That "
-"way, sensible files cannot be accessed directly from the web server."
+"GLPI stores some data in the ``files`` directory, the database access "
+"configuration is stored in the ``config`` directory, etc. Even if GLPI "
+"provides some ways to prevent files from being accessed by the webserver "
+"directly, best practise is to store data outside of the web root. That way, "
+"sensitive files cannot be accessed directly from the web server."
 msgstr ""
-"GLPI stores some data in the ``files`` directory, database access "
-"configuration is stored in the ``config`` directory, ... Even if GLPI "
-"provides some securities to prevent files to be accessed from a webserver "
-"directly, the best way to go is to store data outside of the web root. That "
-"way, sensible files cannot be accessed directly from the web server."
+"GLPI stores some data in the ``files`` directory, the database access "
+"configuration is stored in the ``config`` directory, etc. Even if GLPI "
+"provides some ways to prevent files from being accessed by the webserver "
+"directly, best practise is to store data outside of the web root. That way, "
+"sensitive files cannot be accessed directly from the web server."
 
 #: ../../source/install/index.rst:58
 msgid ""
@@ -199,20 +205,18 @@ msgstr ""
 #: ../../source/install/index.rst:68
 msgid ""
 "Directories choice is entirely up to you; the following example will follow "
-"the `FHS <http://www.pathname.com/fhs/>`_ recommandations."
+"the `FHS <http://www.pathname.com/fhs/>`_ recommendations."
 msgstr ""
 "Directories choice is entirely up to you; the following example will follow "
-"the `FHS <http://www.pathname.com/fhs/>`_ recommandations."
+"the `FHS <http://www.pathname.com/fhs/>`_ recommendations."
 
 #: ../../source/install/index.rst:70
 msgid ""
-"Our GLPI instance will be installed in ``/var/www/glpi`` directory, a "
-"specific virtual host in the web server configuration will reflect this "
-"path."
+"Our GLPI instance will be installed in ``/var/www/glpi``, a specific virtual"
+" host in the web server configuration will reflect this path."
 msgstr ""
-"Our GLPI instance will be installed in ``/var/www/glpi`` directory, a "
-"specific virtual host in the web server configuration will reflect this "
-"path."
+"Our GLPI instance will be installed in ``/var/www/glpi``, a specific virtual"
+" host in the web server configuration will reflect this path."
 
 #: ../../source/install/index.rst:72
 msgid ""
@@ -270,11 +274,11 @@ msgstr ""
 
 #: ../../source/install/index.rst:101
 msgid ""
-"For GLPI prior to 9.2.2, ``GLPI_VAR_DIR`` constant did not exists. It was "
-"required to set all paths separately:"
+"For GLPI prior to 9.2.2, the ``GLPI_VAR_DIR`` constant did not exist and it "
+"was required to set all paths separately:"
 msgstr ""
-"For GLPI prior to 9.2.2, ``GLPI_VAR_DIR`` constant did not exists. It was "
-"required to set all paths separately:"
+"For GLPI prior to 9.2.2, the ``GLPI_VAR_DIR`` constant did not exist and it "
+"was required to set all paths separately:"
 
 #: ../../source/install/index.rst:126
 msgid ""
@@ -287,5 +291,35 @@ msgstr ""
 ";)"
 
 #: ../../source/install/index.rst:129
+msgid "Post installation"
+msgstr "Post installation"
+
+#: ../../source/install/index.rst:131
+msgid "Once GLPI has been installed, you're almost done."
+msgstr "Once GLPI has been installed, you're almost done."
+
+#: ../../source/install/index.rst:133
+msgid ""
+"An extra step would be to secure (or remove) installation directory. As an "
+"example, you can consider adding the following to your Apache virtual host "
+"configuration (or in the ``glpi/install/.htaccess`` file):"
+msgstr ""
+"An extra step would be to secure (or remove) installation directory. As an "
+"example, you can consider adding the following to your Apache virtual host "
+"configuration (or in the ``glpi/install/.htaccess`` file):"
+
+#: ../../source/install/index.rst:148
+msgid ""
+"With this example, the `install` directory access will be limited to "
+"localhost only and will display an error message otherwise. Of course, you "
+"may have to adapt this to your needs; refer to your web server's "
+"documentation."
+msgstr ""
+"With this example, the `install` directory access will be limited to "
+"localhost only and will display an error message otherwise. Of course, you "
+"may have to adapt this to your needs; refer to your web server's "
+"documentation."
+
+#: ../../source/install/index.rst:151
 msgid "|ccbyncnd|"
 msgstr "|ccbyncnd|"
