--- a/source/locale/fr_FR/LC_MESSAGES/install/wizard.po
+++ b/source/locale/fr_FR/LC_MESSAGES/install/wizard.po
@@ -6,12 +6,12 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: GLPI 9.2\n"
+"Project-Id-Version: GLPI 9.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-04-20 06:59+0200\n"
+"POT-Creation-Date: 2018-06-29 06:38+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Johan Cwiklinski <trasher@x-tnd.be>, 2018\n"
-"Language-Team: French (France) (https://www.transifex.com/teclib/teams/28042/fr_FR/)\n"
+"Last-Translator: Anth Paw <chpego@chpego.fr>, 2018\n"
+"Language-Team: French (France) (https://www.transifex.com/glpi/teams/87042/fr_FR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -35,7 +35,7 @@ msgid ""
 "When GLPI is not installed; a step-by-step installation process begins."
 msgstr ""
 "Lorsque GLPI n'est pas installé ; un processus d'installation étape par "
-"étape va débuter."
+"étape commence."
 
 #: ../../source/install/wizard.rst:10
 msgid "Choose lang (Select your language)"
@@ -46,7 +46,7 @@ msgid ""
 "The first step will let you choose the installation language. Select your "
 "lang, and click validate."
 msgstr ""
-"La première permet de choisir la langue dans laquelle se déroulera "
+"La première étape permet de choisir la langue dans laquelle se déroulera "
 "l’installation. Sélectionner la langue souhaitée, puis valider."
 
 #: ../../source/install/wizard.rst:20
@@ -160,7 +160,7 @@ msgid ""
 "the database you want for your GLPI and init it."
 msgstr ""
 "Une fois la connexion au serveur de base de données établie, il faut créer "
-"ou choisir la base de données souhaitée pour GLPI puis l’initialiser."
+"ou choisir la base de données souhaitée pour GLPI et l’initialiser."
 
 #: ../../source/install/wizard.rst:83
 msgid "There are 2 ways to go:"
@@ -173,8 +173,8 @@ msgstr "Utiliser une base existante"
 #: ../../source/install/wizard.rst:87
 msgid "Select this database in the displayed list. Validate to use."
 msgstr ""
-"Sélectionner cette base dans la liste des bases affichées. Valider pour "
-"initialiser la base de données."
+"Sélectionner cette base de données dans la liste des bases affichées. "
+"Valider pour initialiser la base de données."
 
 #: ../../source/install/wizard.rst:91
 msgid "Selected database contents will be destroyed on installation."
@@ -184,7 +184,7 @@ msgstr ""
 
 #: ../../source/install/wizard.rst:93
 msgid "Create a new database"
-msgstr "Créer une nouvelle base"
+msgstr "Créer une nouvelle base de données"
 
 #: ../../source/install/wizard.rst:95
 msgid ""
@@ -269,10 +269,10 @@ msgstr ""
 
 #: ../../source/install/wizard.rst:148
 msgid ""
-"Before removing the ```glpi`` account, please make sure you have created "
+"Before removing the ``glpi`` account, please make sure you have created "
 "another user with ``super-admin`` profile."
 msgstr ""
-"Avant de supprimer le compte ``glpi``, s'assurer d'avoir créé un autre "
+"Avant de supprimer le compte ``glpi``, assurez-vous d'avoir créé un autre "
 "utilisateur avec le profil ``super-admin``."
 
 #: ../../source/install/wizard.rst:151
