--- a/source/locale/cs_CZ/LC_MESSAGES/install/index.po
+++ b/source/locale/cs_CZ/LC_MESSAGES/install/index.po
@@ -6,17 +6,17 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: GLPI 9.2\n"
+"Project-Id-Version: GLPI 9.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-04-20 06:59+0200\n"
+"POT-Creation-Date: 2018-06-29 06:38+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>, 2018\n"
-"Language-Team: Czech (Czech Republic) (https://www.transifex.com/teclib/teams/28042/cs_CZ/)\n"
+"Language-Team: Czech (Czech Republic) (https://www.transifex.com/glpi/teams/87042/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: cs_CZ\n"
-"Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=(n == 1 && n % 1 == 0) ? 0 : (n >= 2 && n <= 4 && n % 1 == 0) ? 1: (n % 1 != 0 ) ? 2 : 3;\n"
 
 #: ../../source/install/index.rst:2
 msgid "Install GLPI"
@@ -52,11 +52,9 @@ msgstr ""
 
 #: ../../source/install/index.rst:17
 msgid ""
-"GLPI follows a semantic versionning scheme, on 3 digits. The first one is "
-"the major release, the second the minor and the third the fix release."
+"GLPI follows a semantic versioning scheme, on 3 digits. The first one is the"
+" major release, the second the minor and the third the fix release."
 msgstr ""
-"Pro GLPI je používáno významové schéma označování verzí, pomocí 3 číslic. "
-"První z nich je hlavní vydání, druhé dílčí a třetí opravné vydání."
 
 #: ../../source/install/index.rst:19
 msgid ""
@@ -81,11 +79,9 @@ msgstr "Stáhnout"
 
 #: ../../source/install/index.rst:28
 msgid ""
-"On GitHub, there is always two archives named *Source code* which should not"
-" be used."
+"On GitHub, there are always two archives named *Source code* which should "
+"not be used."
 msgstr ""
-"Na portálu GitHub, se vždy ještě nacházejí dva archivy nazvané *Source code*"
-" (zdrojové kódy) – ty nepoužívejte."
 
 #: ../../source/install/index.rst:30
 msgid ""
@@ -105,40 +101,36 @@ msgstr "Instalace"
 
 #: ../../source/install/index.rst:37
 msgid ""
-"Packages may be available from your distribution (Red Hat, CentOS, Fedora, "
-"Ubuntu, ...) that you should use with your standard packages manager as "
-"usual."
+"Packages may be available from your Linux distribution (Red Hat, CentOS, "
+"Fedora, Ubuntu, ...) that you should use with your standard packages manager"
+" as usual."
 msgstr ""
-"Vámi používaná distribuce (Red Hat, CentOS, Fedora, Ubuntu, …) může "
-"poskytovat předpřipravené balíčky – v takovém případě byste měli použít je, "
-"a nainstalovat jako obvykle standardním správcem balíčků."
 
 #: ../../source/install/index.rst:39
 msgid "GLPI installation itself is composed of three steps:"
 msgstr "Instalace GLPI samotná se skládá ze tří kroků:"
 
 #: ../../source/install/index.rst:41
-msgid "Uncompress archive in your website;"
-msgstr "Rozbalte archiv do kořenové složky svého webového serveru;"
+msgid "Uncompress the archive in your website;"
+msgstr ""
 
 #: ../../source/install/index.rst:42
 msgid ""
-"Give your webserver write access to ``files`` and ``config`` directories;"
+"Give your webserver write access to the ``files`` and ``config`` "
+"directories;"
 msgstr ""
-"Udělte svému webovému serveru oprávnění k zápisu do složek ``files`` a "
-"``config``;"
 
 #: ../../source/install/index.rst:43
 msgid ""
-":doc:`launch installation wizard <wizard>` (or use :ref:`command line "
+":doc:`launch installation wizard <wizard>` (or use the :ref:`command line "
 "installation script <cdline_install>`)."
 msgstr ""
-":doc:`spustit průvodce instalací <wizard>` (nebo použijte :ref:`instalační "
-"skript pro příkazový řádek <cdline_install>`)."
 
 #: ../../source/install/index.rst:45
-msgid "Once three steps has been completed the app is ready to be used."
-msgstr "Po dokončení těchto tří kroků je aplikace připravena k používání."
+msgid ""
+"Once these three steps have been completed the application is ready to be "
+"used."
+msgstr ""
 
 #: ../../source/install/index.rst:48
 msgid "Files and directories locations"
@@ -146,12 +138,9 @@ msgstr "Umístění souborů a složek"
 
 #: ../../source/install/index.rst:50
 msgid ""
-"As many other web applications, GLPI may be installed just by copying the "
-"whole directory to any web server. Anyways, this may be secure less."
+"Like many other web applications, GLPI can be installed by just copying the "
+"whole directory to any web server. However, this may be less secure."
 msgstr ""
-"Jako mnoho ostatních webových aplikací, GLPI je možné nainstalovat pouhým "
-"zkopírováním celé složky do té kořenové webového serveru. Nicméně, to může "
-"být méně bezpečné."
 
 #: ../../source/install/index.rst:54
 msgid ""
@@ -162,17 +151,12 @@ msgstr ""
 
 #: ../../source/install/index.rst:56
 msgid ""
-"GLPI stores some data in the ``files`` directory, database access "
-"configuration is stored in the ``config`` directory, ... Even if GLPI "
-"provides some securities to prevent files to be accessed from a webserver "
-"directly, the best way to go is to store data outside of the web root. That "
-"way, sensible files cannot be accessed directly from the web server."
+"GLPI stores some data in the ``files`` directory, the database access "
+"configuration is stored in the ``config`` directory, etc. Even if GLPI "
+"provides some ways to prevent files from being accessed by the webserver "
+"directly, best practise is to store data outside of the web root. That way, "
+"sensitive files cannot be accessed directly from the web server."
 msgstr ""
-"GLPI ukládá některé data ve složce ``files``, nastavení přístupu do databáze"
-" je uloženo ve složce ``config``, … I když GLPI poskytuje některé pojistky "
-"bránící přístupu k souborům přímo z webového serveru, nejlepší způsob je "
-"ukládat data mimo kořenovou složku webového serveru. Tímto způsobem nebude "
-"možné přistupovat k souborům s citlivým obsahem přímo z webového serveru."
 
 #: ../../source/install/index.rst:58
 msgid ""
@@ -207,19 +191,14 @@ msgstr ""
 #: ../../source/install/index.rst:68
 msgid ""
 "Directories choice is entirely up to you; the following example will follow "
-"the `FHS <http://www.pathname.com/fhs/>`_ recommandations."
+"the `FHS <http://www.pathname.com/fhs/>`_ recommendations."
 msgstr ""
-"Volba složek je zcela na vás; následující příklad dodržuje ` doporučení FHS "
-"<http://www.pathname.com/fhs/>`_ ."
 
 #: ../../source/install/index.rst:70
 msgid ""
-"Our GLPI instance will be installed in ``/var/www/glpi`` directory, a "
-"specific virtual host in the web server configuration will reflect this "
-"path."
+"Our GLPI instance will be installed in ``/var/www/glpi``, a specific virtual"
+" host in the web server configuration will reflect this path."
 msgstr ""
-"Naše GLPI instance bude nainstalována do složky ``/var/www/glpi``, konkrétní"
-" virtuální hostitel v nastavení webového serveru bude odrážet toto umístění."
 
 #: ../../source/install/index.rst:72
 msgid ""
@@ -275,11 +254,9 @@ msgstr ""
 
 #: ../../source/install/index.rst:101
 msgid ""
-"For GLPI prior to 9.2.2, ``GLPI_VAR_DIR`` constant did not exists. It was "
-"required to set all paths separately:"
+"For GLPI prior to 9.2.2, the ``GLPI_VAR_DIR`` constant did not exist and it "
+"was required to set all paths separately:"
 msgstr ""
-"U verzí GLPI před 9.2.2, proměnná ``GLPI_VAR_DIR`` neexistovala. Bylo třeba "
-"nastavit všechna umístění zvlášť:"
 
 #: ../../source/install/index.rst:126
 msgid ""
@@ -291,5 +268,28 @@ msgstr ""
 "toho důvodu, že ten samotný bude… ve složce s nastaveními jako takové ;)"
 
 #: ../../source/install/index.rst:129
+msgid "Post installation"
+msgstr ""
+
+#: ../../source/install/index.rst:131
+msgid "Once GLPI has been installed, you're almost done."
+msgstr ""
+
+#: ../../source/install/index.rst:133
+msgid ""
+"An extra step would be to secure (or remove) installation directory. As an "
+"example, you can consider adding the following to your Apache virtual host "
+"configuration (or in the ``glpi/install/.htaccess`` file):"
+msgstr ""
+
+#: ../../source/install/index.rst:148
+msgid ""
+"With this example, the `install` directory access will be limited to "
+"localhost only and will display an error message otherwise. Of course, you "
+"may have to adapt this to your needs; refer to your web server's "
+"documentation."
+msgstr ""
+
+#: ../../source/install/index.rst:151
 msgid "|ccbyncnd|"
 msgstr "|ccbyncnd|"
