--- a/source/locale/cs_CZ/LC_MESSAGES/install/wizard.po
+++ b/source/locale/cs_CZ/LC_MESSAGES/install/wizard.po
@@ -6,17 +6,17 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: GLPI 9.2\n"
+"Project-Id-Version: GLPI 9.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-04-20 06:59+0200\n"
+"POT-Creation-Date: 2018-06-29 06:38+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>, 2018\n"
-"Language-Team: Czech (Czech Republic) (https://www.transifex.com/teclib/teams/28042/cs_CZ/)\n"
+"Language-Team: Czech (Czech Republic) (https://www.transifex.com/glpi/teams/87042/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: cs_CZ\n"
-"Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=(n == 1 && n % 1 == 0) ? 0 : (n >= 2 && n <= 4 && n % 1 == 0) ? 1: (n % 1 != 0 ) ? 2 : 3;\n"
 
 #: ../../source/install/wizard.rst:2
 msgid "Install wizard"
@@ -258,11 +258,9 @@ msgstr ""
 
 #: ../../source/install/wizard.rst:148
 msgid ""
-"Before removing the ```glpi`` account, please make sure you have created "
+"Before removing the ``glpi`` account, please make sure you have created "
 "another user with ``super-admin`` profile."
 msgstr ""
-"Před odebráním účtu ```glpi`` nezapomeňte vytvořit jiný uživatelský účet s "
-"profilem ``super-admin`` (hlavní správce)."
 
 #: ../../source/install/wizard.rst:151
 msgid "|ccbyncnd|"
