--- a/source/locale/en_GB/LC_MESSAGES/command-line.po
+++ b/source/locale/en_GB/LC_MESSAGES/command-line.po
@@ -6,9 +6,9 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: GLPI 9.2\n"
+"Project-Id-Version: GLPI 9.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-04-20 06:59+0200\n"
+"POT-Creation-Date: 2018-06-29 06:38+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -36,11 +36,11 @@ msgstr ""
 msgid ""
 "If APCu is installed on your system, it may fail from command line since "
 "default configuration disables it from command-line. To change that, set "
-"``apc.enable_cli`` to ``on`` in yor APCu configuration file."
+"``apc.enable_cli`` to ``on`` in your APCu configuration file."
 msgstr ""
 "If APCu is installed on your system, it may fail from command line since "
 "default configuration disables it from command-line. To change that, set "
-"``apc.enable_cli`` to ``on`` in yor APCu configuration file."
+"``apc.enable_cli`` to ``on`` in your APCu configuration file."
 
 #: ../../source/command-line.rst:13
 msgid "Install"
