--- a/source/locale/en_GB/LC_MESSAGES/update.po
+++ b/source/locale/en_GB/LC_MESSAGES/update.po
@@ -6,9 +6,9 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: GLPI 9.2\n"
+"Project-Id-Version: GLPI 9.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-04-20 06:59+0200\n"
+"POT-Creation-Date: 2018-06-29 06:38+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -43,10 +43,10 @@ msgstr "backup your configuration."
 #: ../../source/update.rst:12
 msgid ""
 "GLPI update process is automated. To start it, just go to your GLPI instance"
-" URI, or (recommanded) use the :doc:`command line tools <command-line>`."
+" URI, or (recommended) use the :doc:`command line tools <command-line>`."
 msgstr ""
 "GLPI update process is automated. To start it, just go to your GLPI instance"
-" URI, or (recommanded) use the :doc:`command line tools <command-line>`."
+" URI, or (recommended) use the :doc:`command line tools <command-line>`."
 
 #: ../../source/update.rst:14
 msgid ""
@@ -58,9 +58,9 @@ msgstr ""
 
 #: ../../source/update.rst:16
 msgid ""
-"Plase also note the update process will automatically disable your plugins."
+"Please also note the update process will automatically disable your plugins."
 msgstr ""
-"Plase also note the update process will automatically disable your plugins."
+"Please also note the update process will automatically disable your plugins."
 
 #: ../../source/update.rst:20
 msgid ""
