--- a/source/locale/pt_BR/LC_MESSAGES/install/wizard.po
+++ b/source/locale/pt_BR/LC_MESSAGES/install/wizard.po
@@ -6,12 +6,12 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: GLPI 9.2\n"
+"Project-Id-Version: GLPI 9.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-04-20 06:59+0200\n"
+"POT-Creation-Date: 2018-06-29 06:38+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Wanderlei Hüttel <wanderlei.huttel@gmail.com>, 2018\n"
-"Language-Team: Portuguese (Brazil) (https://www.transifex.com/teclib/teams/28042/pt_BR/)\n"
+"Language-Team: Portuguese (Brazil) (https://www.transifex.com/glpi/teams/87042/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -261,11 +261,9 @@ msgstr ""
 
 #: ../../source/install/wizard.rst:148
 msgid ""
-"Before removing the ```glpi`` account, please make sure you have created "
+"Before removing the ``glpi`` account, please make sure you have created "
 "another user with ``super-admin`` profile."
 msgstr ""
-"Antes de remover a conta ``glpi``, certifique-se de ter criado outro usuário"
-" com o perfil```super-admin``."
 
 #: ../../source/install/wizard.rst:151
 msgid "|ccbyncnd|"
