--- a/source/locale/ru_RU/LC_MESSAGES/command-line.po
+++ b/source/locale/ru_RU/LC_MESSAGES/command-line.po
@@ -6,11 +6,12 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: GLPI 9.2\n"
+"Project-Id-Version: GLPI 9.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-04-20 06:59+0200\n"
+"POT-Creation-Date: 2018-06-29 06:38+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Language-Team: Russian (Russia) (https://www.transifex.com/teclib/teams/28042/ru_RU/)\n"
+"Last-Translator: Alexey Petukhov <lexx015@gmail.com>, 2018\n"
+"Language-Team: Russian (Russia) (https://www.transifex.com/glpi/teams/87042/ru_RU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -33,12 +34,12 @@ msgstr ""
 msgid ""
 "If APCu is installed on your system, it may fail from command line since "
 "default configuration disables it from command-line. To change that, set "
-"``apc.enable_cli`` to ``on`` in yor APCu configuration file."
+"``apc.enable_cli`` to ``on`` in your APCu configuration file."
 msgstr ""
 
 #: ../../source/command-line.rst:13
 msgid "Install"
-msgstr ""
+msgstr "Установить"
 
 #: ../../source/command-line.rst:15
 msgid ""
@@ -48,7 +49,7 @@ msgstr ""
 
 #: ../../source/command-line.rst:17
 msgid "You have to specify at least a database name and an user:"
-msgstr ""
+msgstr "Вы должны указать имя БД и пользователя:"
 
 #: ../../source/command-line.rst:23
 msgid "It is possible to specifiy some variables calling the script:"
@@ -56,43 +57,44 @@ msgstr ""
 
 #: ../../source/command-line.rst:25
 msgid "``--host`` host name (`localhost` per default),"
-msgstr ""
+msgstr "``--host`` имя хоста (`localhost` по-умолчанию),"
 
 #: ../../source/command-line.rst:26
 msgid "``--db`` database name,"
-msgstr ""
+msgstr "``--db`` имя БД,"
 
 #: ../../source/command-line.rst:27
 msgid "``--user`` database user name,"
-msgstr ""
+msgstr "``--user`` пользователь БД,"
 
 #: ../../source/command-line.rst:28
 msgid "``--pass`` database user's pasword,"
-msgstr ""
+msgstr "``--pass`` пароль пользователя БД,"
 
 #: ../../source/command-line.rst:29 ../../source/command-line.rst:49
 msgid ""
 "``--lang`` language code to use (`fr_FR` as example). Will be set to `en_GB`"
 " per default,"
-msgstr ""
+msgstr "``--lang`` язык (`fr_FR`, например). По-умолчанию `en_GB`,"
 
 #: ../../source/command-line.rst:30
 msgid "``--tests`` create tests configuration file,"
-msgstr ""
+msgstr "``--tests`` создает тестовый конфигурационный файл,"
 
 #: ../../source/command-line.rst:31
 msgid ""
 "``--force`` do not check if GLPI is already installed and drop what would "
 "exists,"
 msgstr ""
+"``--force`` не проверять установлен ли GLPI и удалить текущую установку,"
 
 #: ../../source/command-line.rst:32 ../../source/command-line.rst:50
 msgid "``--help`` displays command help."
-msgstr ""
+msgstr "``--help`` показывает помощь."
 
 #: ../../source/command-line.rst:37
 msgid "Update"
-msgstr ""
+msgstr "Обновить"
 
 #: ../../source/command-line.rst:39
 msgid "An update script is provided as well (``scripts/cliupdate.php``)."
@@ -106,7 +108,7 @@ msgstr ""
 
 #: ../../source/command-line.rst:45
 msgid "Do not forget to backup your database before any update try!"
-msgstr ""
+msgstr "Не забывайте сделать резервную копию БД до попытки обновления!"
 
 #: ../../source/command-line.rst:47
 msgid "Possible options for this command are:"
