--- a/source/locale/zh-Hans/LC_MESSAGES/command-line.po
+++ b/source/locale/zh-Hans/LC_MESSAGES/command-line.po
@@ -10,17 +10,17 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-06-29 06:38+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Anth Paw <chpego@chpego.fr>, 2018\n"
-"Language-Team: French (France) (https://www.transifex.com/glpi/teams/87042/fr_FR/)\n"
+"Last-Translator: liAnGjiA <liangjia@qq.com>, 2018\n"
+"Language-Team: Chinese Simplified (https://www.transifex.com/glpi/teams/87042/zh-Hans/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: fr_FR\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Language: zh-Hans\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 
 #: ../../source/command-line.rst:2
 msgid "Command line tools"
-msgstr "Outils en ligne de commande"
+msgstr "命令行工具"
 
 #: ../../source/command-line.rst:4
 msgid ""
@@ -29,10 +29,6 @@ msgid ""
 "versions, those scripts were present in the ``tools`` directory that is not "
 "official and therefore not in the release archive."
 msgstr ""
-"Depuis GLPI 9.2.2, des outils en ligne de commande sont fournis et "
-"disponibles dans le dossier ``script`` de l'archive. Sur les versions "
-"précédentes, ces outils étaient présents dans le dossier ``tools`` qui n'est"
-" pas officiel et donc non fourni dans l'archive de release."
 
 #: ../../source/command-line.rst:8
 msgid ""
@@ -40,122 +36,98 @@ msgid ""
 "default configuration disables it from command-line. To change that, set "
 "``apc.enable_cli`` to ``on`` in your APCu configuration file."
 msgstr ""
-"Si APCu est installé sur votre système, il se peut qu'il provoque des échecs"
-" en ligne de commande puisque sa configuration par défaut le désactive pour "
-"la ligne de commande. Pour changer cela, définissez ``apc.enable_cli`` à "
-"``on`` dans votre fichier de configuration APCu;"
 
 #: ../../source/command-line.rst:13
 msgid "Install"
-msgstr "Installation"
+msgstr "安装"
 
 #: ../../source/command-line.rst:15
 msgid ""
 "A PHP command line installation script is provided in the GLPI archive "
 "(``scripts/cliinstall.php``)."
 msgstr ""
-"Un script PHP d'installation en ligne de commande est fourni dans l'archive "
-"GLPI (``scripts/cliinstall.php``)."
 
 #: ../../source/command-line.rst:17
 msgid "You have to specify at least a database name and an user:"
 msgstr ""
-"Un nom de base de données et un utilisateur doivent être spécifiés à minima "
-":"
 
 #: ../../source/command-line.rst:23
 msgid "It is possible to specifiy some variables calling the script:"
 msgstr ""
-"Il est possible de spécifier quelques variables lors de l'appel du script :"
 
 #: ../../source/command-line.rst:25
 msgid "``--host`` host name (`localhost` per default),"
-msgstr "``--host`` nom de l'hôte (`localhost` par défaut),"
+msgstr ""
 
 #: ../../source/command-line.rst:26
 msgid "``--db`` database name,"
-msgstr "``--db`` nom de la base de données,"
+msgstr "``--db`` 数据库名称,"
 
 #: ../../source/command-line.rst:27
 msgid "``--user`` database user name,"
-msgstr "``--user`` nom de l'utilisateur de la base de données,"
+msgstr "``--user`` 数据库用户名,"
 
 #: ../../source/command-line.rst:28
 msgid "``--pass`` database user's pasword,"
-msgstr "``--pass`` mot de passe de l'utilisateur de base de données,"
+msgstr "``--pass`` 数据库密码,"
 
 #: ../../source/command-line.rst:29 ../../source/command-line.rst:49
 msgid ""
 "``--lang`` language code to use (`fr_FR` as example). Will be set to `en_GB`"
 " per default,"
 msgstr ""
-"``--lang`` code de langue à utiliser (`fr_FR` par exemple). Sera positionné "
-"sur `en_GB` par défaut,"
 
 #: ../../source/command-line.rst:30
 msgid "``--tests`` create tests configuration file,"
-msgstr "``--tests`` création du fichier de configuration pour les tests,"
+msgstr ""
 
 #: ../../source/command-line.rst:31
 msgid ""
 "``--force`` do not check if GLPI is already installed and drop what would "
 "exists,"
 msgstr ""
-"``--force`` ne vérifie pas si GLPI est déjà installé et supprime tout ce qui"
-" existerait déjà,"
 
 #: ../../source/command-line.rst:32 ../../source/command-line.rst:50
 msgid "``--help`` displays command help."
-msgstr "``--help`` affiche l'aide sur la commande."
+msgstr ""
 
 #: ../../source/command-line.rst:37
 msgid "Update"
-msgstr "Mise à jour"
+msgstr "更新"
 
 #: ../../source/command-line.rst:39
 msgid "An update script is provided as well (``scripts/cliupdate.php``)."
 msgstr ""
-"Un script de mise à jour est également fourni (``scripts/cliupdate.php``)."
 
 #: ../../source/command-line.rst:41
 msgid ""
 "There is no required arguments, just run the script so it updates your "
 "database automatically."
 msgstr ""
-"Aucun argument n'est requis, lancer juste le script pour qu'il mette à jour "
-"votre base de données automatiquement."
 
 #: ../../source/command-line.rst:45
 msgid "Do not forget to backup your database before any update try!"
 msgstr ""
-"Ne pas oublier d'effectuer une sauvegarde de la base de données avant totue "
-"tentative de mise à jour !"
 
 #: ../../source/command-line.rst:47
 msgid "Possible options for this command are:"
-msgstr "Les options possibles pour cette commande sont :"
+msgstr ""
 
 #: ../../source/command-line.rst:51
 msgid "``--config-dir`` set configuration file path to use,"
 msgstr ""
-"``--config-dir`` définit le chemin vers le fichier de configuration à "
-"utiliser,"
 
 #: ../../source/command-line.rst:52
 msgid ""
 "``--force`` force update, usefull when GLPI version does not change (mainly "
 "when working on it ;)),"
 msgstr ""
-"``--force`` force la mise à jour, utile notamment lorsque la version de GLPI"
-" n'a pas changé (principalement en cours de développement ;)),"
 
 #: ../../source/command-line.rst:53
 msgid ""
 "``--dev`` required to use a development version. Use it with caution..."
 msgstr ""
-"``--dev`` requis pour utiliser une version de développement. À utiliser avec"
-" parcimonie..."
 
 #: ../../source/command-line.rst:56
 msgid "|ccbyncnd|"
-msgstr "|ccbyncnd|"
+msgstr ""
