--- a/source/locale/zh-Hans/LC_MESSAGES/index.po
+++ b/source/locale/zh-Hans/LC_MESSAGES/index.po
@@ -10,25 +10,23 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-06-29 06:38+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Johan Cwiklinski <jcwiklinski@teclib.com>, 2018\n"
-"Language-Team: French (France) (https://www.transifex.com/glpi/teams/87042/fr_FR/)\n"
+"Last-Translator: liAnGjiA <liangjia@qq.com>, 2018\n"
+"Language-Team: Chinese Simplified (https://www.transifex.com/glpi/teams/87042/zh-Hans/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: fr_FR\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Language: zh-Hans\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 
 #: ../../source/index.rst:7
 msgid "GLPI installation"
-msgstr "Installation de GLPI"
+msgstr "安装GLPI"
 
 #: ../../source/index.rst:9
 msgid ""
 "This documentation presents `GLPI <http://glpi-project.org>`_ installation "
 "instructions."
 msgstr ""
-"Cette documentation présente les instructions d'installation de `GLPI <http"
-"://glpi-project.org>`_."
 
 #: ../../source/index.rst:11
 msgid ""
@@ -38,13 +36,7 @@ msgid ""
 "issues, from hardware components and software inventories management to user"
 " helpdesk management."
 msgstr ""
-":abbr:`GLPI (Gestion Libre de Parc Informatique)` est un système libre (open"
-" source) de gestion de parc informatique et de helpdesk accessible via un "
-"navigateur web conçue pour gérer l’ensemble de vos problématiques de gestion"
-" de parc informatique, de la gestion de l’inventaire des composantes "
-"matérielles et logicielles d’un parc informatique à la gestion de "
-"l’assistance aux utilisateurs."
 
 #: ../../source/index.rst:23
 msgid "|ccbyncnd|"
-msgstr "|ccbyncnd|"
+msgstr ""
