--- a/source/locale/zh-Hans/LC_MESSAGES/update.po
+++ b/source/locale/zh-Hans/LC_MESSAGES/update.po
@@ -10,35 +10,35 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-06-29 06:38+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Alexey Petukhov <lexx015@gmail.com>, 2018\n"
-"Language-Team: Russian (Russia) (https://www.transifex.com/glpi/teams/87042/ru_RU/)\n"
+"Last-Translator: liAnGjiA <liangjia@qq.com>, 2018\n"
+"Language-Team: Chinese Simplified (https://www.transifex.com/glpi/teams/87042/zh-Hans/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: ru_RU\n"
-"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n%100>=11 && n%100<=14)? 2 : 3);\n"
+"Language: zh-Hans\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 
 #: ../../source/update.rst:2
 msgid "Update"
-msgstr "Обновление"
+msgstr "更新"
 
 #: ../../source/update.rst:6
 msgid ""
 "As for every update process, you have to backup some data before processing "
 "any upgrade:"
-msgstr "Перед каждым процессом обновления сделайте резервную копию данных:"
+msgstr ""
 
 #: ../../source/update.rst:8
 msgid "**backup your database**;"
-msgstr "**сделайте резервную копию БД**;"
+msgstr "**备份数据库备份数据库备份数据库**;"
 
 #: ../../source/update.rst:9
 msgid "backup your files directory;"
-msgstr "сделайте резервную копию папки files;"
+msgstr "备份文档目录;"
 
 #: ../../source/update.rst:10
 msgid "backup your configuration."
-msgstr "сделайте резервную копию конфигурации."
+msgstr "备份配置."
 
 #: ../../source/update.rst:12
 msgid ""
@@ -51,8 +51,6 @@ msgid ""
 "Once a new version will be installed; you will not be able to use the "
 "application until a migration has been done."
 msgstr ""
-"При установке новой версии не будет возможности использовать GLPI до тех "
-"пор, пока не будет осуществлен процесс миграции на новую версию."
 
 #: ../../source/update.rst:16
 msgid ""
@@ -64,16 +62,12 @@ msgid ""
 "You should not try to restore a database backup on a non empty database "
 "(say, a database that has been partially migrated for any reason)."
 msgstr ""
-"Нельзя восстанавливать БД если она непуста, так же как и если процесс "
-"миграции прерывался."
 
 #: ../../source/update.rst:22
 msgid ""
 "Make sure your database is empty before restoring your backup and try to "
 "update, and repeat on fail."
 msgstr ""
-"Перед восстановлением резервной копии удостоверьтесь, что БД пуста и "
-"попробуйте обновить, попробуйте снова при ошибке."
 
 #: ../../source/update.rst:25
 msgid "|ccbyncnd|"
