--- a/source/locale/pt_BR/LC_MESSAGES/index.po
+++ b/source/locale/pt_BR/LC_MESSAGES/index.po
@@ -10,7 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-06-29 06:38+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Wanderlei Hüttel <wanderlei.huttel@gmail.com>, 2018\n"
+"Last-Translator: Johan Cwiklinski <jcwiklinski@teclib.com>, 2018\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/glpi/teams/87042/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -38,7 +38,7 @@ msgid ""
 "issues, from hardware components and software inventories management to user"
 " helpdesk management."
 msgstr ""
-": abbr: `GLPI (Gestion Libre de Parc Informatique)` é uma solução de "
+": abbr:`GLPI (Gestion Libre de Parc Informatique)` é uma solução de "
 "gerenciamento de ativos e helpdesk gratuita (como em \"liberdade de "
 "expressão\" e não como \"cerveja de graça\"!), acessível a partir de um "
 "navegador web criado para gerenciar todos os problemas de gerenciamento de "
